apis/synthetic-bank/accounts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banklab-accounts-api
  namespace: tenant-accounts
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: synthetic-api
    banklab.konghq.com/api-domain: accounts
    banklab.konghq.com/owner: tenant-accounts-team
    banklab.konghq.com/exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: banklab-accounts-api
  template:
    metadata:
      labels:
        banklab.konghq.com/managed-by: gitops
        banklab.konghq.com/platform-layer: synthetic-api
        banklab.konghq.com/api-domain: accounts
        banklab.konghq.com/owner: tenant-accounts-team
        banklab.konghq.com/exposure: internal
        app.kubernetes.io/name: banklab-accounts-api
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:1.27-alpine@sha256:65e3e85dbaed8ba248841d9d58a899b6197106c23cb0ff1a132b7bfe0547e4c0
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: mock-responses
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          readOnly: true
        - name: tmp
          mountPath: /tmp
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: mock-responses
        configMap:
          name: banklab-accounts-mock-responses
      - name: tmp
        emptyDir: {}
