apis/synthetic-bank/accounts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banklab-accounts-api
  namespace: tenant-accounts
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: synthetic-api
    banklab.konghq.com/environment: lab
    banklab.konghq.com/data-classification: synthetic
    banklab.konghq.com/lifecycle: sandbox
    banklab.konghq.com/auth-profile: none-temporary-goal003-sandbox
    banklab.konghq.com/auth-state: temporary-no-auth
    banklab.konghq.com/goal: goal-003
    banklab.konghq.com/api-domain: accounts
    banklab.konghq.com/owner: tenant-accounts-team
    banklab.konghq.com/exposure: internal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: banklab-accounts-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
